--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: aqua;
+}
+.wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
